# optitrade

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vercel.json
apps/backend/: .coverage  .gitignore  README.md  __init__.py  grpc_server.py  main.py  project.json  pyproject.toml
apps/backend/custom_nanobot-main/: .env.example  Dockerfile  podman-compose.yml  pyproject.toml
apps/backend/custom_nanobot-main/nanobot/api/: server.py
apps/backend/custom_nanobot-main/nanobot/cli/: commands.py
apps/backend/custom_nanobot-main/nanobot/providers/: registry.py
apps/backend/data/: editable_portfolio.json  news_analysis_result.json  paper_portfolios.json
apps/backend/eval/: README.md
apps/backend/eval/datasets/internal/: chart_pattern_numeric.jsonl  chart_rec_numeric.jsonl  grounded_prompts.jsonl  portfolio_numeric.jsonl  ui_rendering.jsonl
apps/backend/eval/datasets/public/: README.md  failsafeqa_bait.jsonl  failsafeqa_robustness.jsonl
apps/backend/eval/harnesses/: chat_panel_harness.py  length_bias.py  test_portfolio_json_contract.py
apps/backend/eval/results/: faithfulness-20260709T083135Z.json  faithfulness-20260709T083135Z.md  faithfulness-20260709T083155Z.json  faithfulness-20260709T083155Z.md  faithfulness-20260709T083449Z.json  faithfulness-20260709T083449Z.md  faithfulness-20260709T084818Z.json  faithfulness-20260709T084818Z.md  faithfulness-20260709T085105Z.json  faithfulness-20260709T085105Z.md  faithfulness-20260709T085631Z.json  faithfulness-20260709T085631Z.md  faithfulness-20260709T085956Z.json  faithfulness-20260709T085956Z.md  faithfulness-20260709T090142Z.json  faithfulness-20260709T090142Z.md  faithfulness-aggregate.json  faithfulness-aggregate.md  nanobot-ttft-20260709.json
apps/backend/eval/scripts/: aggregate_faithfulness.py  debug_nanobot.py  debug_nanobot2.py  generate_bait.py  generate_grounded.py  generate_robustness.py  generate_widget_numeric.py  nanobot_ttft_probe.py  pull_failsafeqa.py  run_faithfulness.py  signal_poller_eval.py  synthesize_grounded.py  validate_datasets.py
apps/backend/news_fetcher/: __init__.py  analyze_daily_sentiment.py  analyzer.py  compare_sentiment.py  config.py  fetch_daily_news.py  fetcher.py  pipeline.py  run_news_pipeline.py
apps/backend/protos/: __init__.py  helloworld.proto
apps/backend/scripts/: ai4trade_signal_poller.py  migrate_json_to_sqlite.py  run_news_pipeline.py
apps/backend/src/: __init__.py  binance_client.py  db.py  firebase_auth.py  firestore_store.py  futu_client.py  greeter_client.py  greeter_server.py  ibkr_client.py  portfolio.py  portfolio_api.py  rest_server.py  services.py
apps/backend/src/api/: __init__.py  deps.py
apps/backend/src/data/: broker_connection.json
apps/backend/src/observability/: __init__.py  profile.py
apps/backend/src/services/: __init__.py  portfolio_analysis_service.py  portfolio_service.py  stock_analytics.py  stock_chart_analysis_service.py  stock_chart_service.py  stock_pattern_analysis_service.py  stock_pattern_detection.py  stock_support_resistance.py
apps/backend/tests/: conftest.py  test_ai_stock_chart.py  test_greeter.py  test_hello.py  test_news_analyzer.py  test_pattern_explanation.py  test_portfolio.py  test_portfolio_analysis_service.py  test_portfolio_service_fallback.py  test_rest_api.py  test_stock_chart.py  test_stock_chart_patterns.py  test_stock_support_resistance.py
(+168 files in other folders)
