[tool.coverage.run]
branch = true
source = ["src", "protos"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/backend/html'
 --cov-report xml:'../../coverage/apps/backend/coverage.xml'
 --html='../../reports/apps/backend/unittests/html/index.html'
 --junitxml='../../reports/apps/backend/unittests/junit.xml'
"""

[project]
name = "optitrade-backend"
version = "0.1.0"
description = "OptiTrade Copilot: An AI-Driven Trading Portal with Interactive Dynamic Canvas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "firebase-admin>=7.1.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.45",
    "langchain-openai>=0.2.14",
    "uvicorn>=0.34.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "ib-insync>=0.9.86",
    "futu-api>=9.4.5408",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "yfinance>=1.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["apps.backend"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "httpx>=0.24.0",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
  "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
